# treesitter-nats-server

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  Taskfile.yaml  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-nats-server-conf.pc  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-nats-server-conf.pc.in
bindings/c/tree_sitter/: tree-sitter-nats-server-conf.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nats_server_conf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNatsServerConfTests/: TreeSitterNatsServerConfTests.swift
docs/: design-templating-support.md
docs/editors/: emacs.md  helix.md  neovim.md  nova.md  vscode.md  zed.md
examples/: basic.conf  cluster.conf  full.conf  jetstream.conf
plugin/: nats_server_conf.lua
queries/: folds.scm  highlights.scm  indents.scm  injections-erb-only.scm  injections-gotmpl.scm  injections-none.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks.txt  comments.txt  includes.txt  pairs.txt  real_config.txt  templates_erb.txt  templates_jinja.txt  templates_modeline.txt  types.txt  variables.txt
