[package]
name = "tree-sitter-nats-server-conf"
description = "Tree-sitter grammar for NATS server configuration files"
version = "0.1.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nats-server-conf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/synadia-labs/treesitter-nats-server"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
