[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-nats-server-conf"
description = "Tree-sitter grammar for NATS server configuration files"
version = "0.1.2"
keywords = ["incremental", "parsing", "tree-sitter", "nats-server-conf"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Phil Pennock" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/synadia-labs/treesitter-nats-server"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
